# hydra-scale-equinix-metal

./: Cargo.toml  README.md  enter-env.sh  flake.nix  hardware_categories.json  hardware_categories.toml
.github/workflows/: rust.yml
src/: device.rs  hardware.rs  machine_type.rs  main.rs
