[package]
name = "scale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
reqwest = { version = "0.11.13", features = [ "json" ] }
serde = { version = "1.0.151", features = [ "derive" ] }
serde_json = "1.0.91"
time = { version = "0.3.17", features = [ "serde", "parsing"] }
tokio = { version ="1.23.0", features = [ "rt", "rt-multi-thread", "macros" ] }
